# rragundez.github.io

./: .gitignore  2015-12-01-data-scientist-qualogy.html  2015-12-01-phd-theoretical-physics.html  2016-01-01-data-scientist-leiden-university-infostrada.html  2016-03-12-pydata-amsterdam.html  2016-04-07-seminar-data-science-and-sports.html  2016-06-06-data-science-summit-europe.html  2016-07-01-data-scientist-bakkersland.html  2016-07-04-data-scientist-godatadriven.html  2016-08-01-data-scientist-bakkersland.html  2017-02-01-data-scientist-engineer-knab.html  2017-02-01-senior-data-scientist-unilever.html  2017-05-01-data-scientist-nle.html  2017-07-01-data-scientist-kpn.html  2017-07-01-godatadriven-go.html  2017-11-01-data-scientist-unilever.html  2017-11-01-senior-data-scientist-unilever.html  2017-12-02-advanced-deep-learning.html  2017-12-04-advanced-python-mastery.html  2018-01-09-phd-to-gdd-vrij-universiteit.html  2018-01-17-code-breakfast-deep-learning.html  2018-03-01-data-science-with-python-atos.html  2018-03-01-data-scientist-kpn-nspire.html  2018-03-01-lead-data-scientist-kpn-nspire.html  2018-04-01-advanced-deep-learning-ahol.html  2018-05-02-python-masterclass-restart-network.html  2018-05-20-deep-learning-deloitte.html  2018-05-26-pydata-amsterdam.html  2018-05-29-dutch-data-science-week.html  2018-06-02-unsupervised-and-reinforcement-learning.html  2018-06-06-spark-ai-summit.html  2018-06-28-code-breakfast-transfer-learning.html  2018-09-12-big-data-expo.html  2018-10-01-data-scientist-schiphol-group.html  2019-01-15-keras-preprocessing-collaborator.html  (+39 more)
(+268 files in other folders)
